# wily-the-wizard

./: .gitignore  Cargo.toml  ecs.rs
data/: creatures.yaml
game/: Cargo.toml
game/src/: ai.rs  components.rs  consts.rs  creatures.rs  game.rs  generator.rs  main.rs  map.rs  messages.rs  path.rs  point.rs  render.rs  save.rs  scheduler.rs  spatial.rs  spells.rs  systems.rs  utils.rs
game/src/actions/: definitions.rs  items.rs  mod.rs
game/src/ai/: behaviour.rs  mod.rs
game/src/rules/: attack.rs  collision.rs  definitions.rs  items.rs  mod.rs  spells.rs  trigger.rs
game/src/screens/: game_over.rs  game_screen.rs  inventory_screen.rs  level_up.rs  main_menu.rs  mod.rs  spell_entity_target.rs  spell_position_target.rs  spell_projectile_target.rs  spell_ray_target.rs  target.rs  win.rs
geo/: Cargo.toml
geo/src/: lib.rs  point.rs  rect.rs
map_generator/: Cargo.toml
map_generator/src/: bsp.rs  corridor.rs  lib.rs  main.rs  map.rs  roomsy.rs  tower.rs
src/: components.rs  creatures.rs  entity_pool.rs  game.rs  main.rs  map.rs  path.rs  render.rs  save.rs  scheduler.rs  spells.rs  systems.rs
src/actions/: definitions.rs  items.rs  mod.rs
src/rules/: attack.rs  definitions.rs  items.rs  mod.rs  statuses.rs
src/screens/: game_screen.rs  mod.rs  utils.rs
