[package]
name = "wily-the-wizard"
version = "0.1.0"
authors = ["Michael A. Plikk <michael@plikk.com>"]

[dependencies]
time = "0.1.*"
simple-stopwatch = "0.1.4"
spawning_pool = { git = "https://github.com/mipli/spawning-pool.git" , branch = "generics" }
tcod = { version = "*", features = ["serialization"] }
rand = "*"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
yaml-rust = "0.4"
Inflector = "*"
