[package]
name = "game"
version = "0.1.0"
authors = ["Michael A. Plikk <michael@plikk.com>"]

[dependencies]
spawning_pool = { git = "https://github.com/mipli/spawning-pool.git" }
map_generator = { path = "../map_generator" }
geo = { path = "../geo" }
time = "0.1.*"
simple-stopwatch = "0.1.4"
tcod = { git = "https://github.com/Gustorn/tcod-rs.git", branch = "tcod-16-upstream-rebase", features = ["serialization"]}
rand = "*"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
yaml-rust = "0.4"
Inflector = "*"
fnv = "1.0.6"
